# LindbladEquationSolver

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMKLParallel.cmake  FindMKLSequential.cmake
commutator_files/: commutator_file10.txt  commutator_file12.txt  commutator_file5.txt  commutator_file8.txt
d_tensor_files/: d_tensor_file12.txt  d_tensor_file5.txt  d_tensor_file7.txt  d_tensor_file9.txt
f_tensor_files/: f_tensor_file10.txt  f_tensor_file12.txt  f_tensor_file5.txt  f_tensor_file6.txt  f_tensor_file7.txt  f_tensor_file8.txt
include/: count_sorts.h  generate_matrices.h  generate_matrices_v2.h  lindblad_utils.h  lindblad_utils_dimer.h  matrix_decomposition.h  mkl_complex16.h  original.h  testing_dimer.h  timer.h
src/: explanation_comparsion.md  hardcore.cpp  main.cpp  main_RK_control.cpp  main_dense.cpp  main_dimer.cpp  main_dimer_slow.cpp  main_with_lindbladians.cpp  mkl_parallel_check.cpp  original.cpp  tensor_to_file.cpp  test_d_tensor.cpp  test_f_tensor.cpp  test_k_tensor.cpp  test_q_tensor.cpp  test_r_tensor.cpp
src/tests_on_correctness/: test_anticommutator.cpp  test_commutator.cpp  test_d_tensor.cpp  test_f_tensor.cpp  test_integrating.cpp  test_k_tensor.cpp  test_k_vector.cpp  test_q_matrix.cpp  test_q_tensor.cpp  test_r_matrix.cpp  test_r_matrix_scheme.cpp  test_r_tensor.cpp
src/tests_on_perfomance/: test_perfomance_f_tensor_fast.cpp  test_perfomance_f_tensor_slow.cpp  test_perfomance_k_tensor_fast.cpp  test_perfomance_k_tensor_slow.cpp  test_perfomance_k_vector_fast.cpp  test_perfomance_k_vector_slow.cpp  test_perfomance_main.cpp  test_perfomance_main_dimer.cpp  test_perfomance_q_matrix_dimer.cpp  test_perfomance_q_matrix_fast.cpp  test_perfomance_q_matrix_slow.cpp  test_perfomance_q_tensor_dimer.cpp  test_perfomance_q_tensor_fast.cpp  test_perfomance_q_tensor_slow.cpp  test_perfomance_r_matrix_dimer.cpp  test_perfomance_r_matrix_fast.cpp  test_perfomance_r_matrix_slow.cpp  test_perfomance_r_tensor_dimer.cpp  test_perfomance_r_tensor_fast.cpp  test_perfomance_r_tensor_slow.cpp
visualization/: tensor_2d_visualize.ipynb  tensor_3d_visualize.ipynb
